# pysosi

./: .gitignore  LICENSE  README.md  TODO.md  commitlint.config.js  pull_request_template.md  pyproject.toml  pytest.ini  requirements.txt  sosi.py  tox.ini  utils.py
.github/workflows/: commitlint-conventional.yml  main.yml  release-please.yml
pysosi/: __init__.py  sosi.py  utf_utils.py
sosi/: __init__.py  sosi.py  utf_utils.py
tests/pysosi/: test_sosi.py
